<resources>
    <string name="rp_bank_account_holder_name_hint">Account holder name</string>
    <string name="rp_bank_account_ifsc_code_hint">IFSC code</string>
    <string name="rp_bank_account_number_hint">Account number</string>
    <string name="rp_verify_bank_account">Verify account details</string>
    <string name="rp_or">Or</string>
    <string name="rp_error_name">Invalid name, Please enter valid name</string>
    <string name="rp_error_ifsc">Invalid IFSC, please enter valid IFSC</string>
    <string name="rp_error_account">Invalid account number, Please enter valid account number</string>
    <string name="rp_error_upi_id_invalid">Invalid UPI ID, Please enter valid UPI ID</string>
    <string name="rp_add_bank_account">Add Bank Account</string>
    <string name="rp_edit">Edit</string>
    <string name="rp_retry">Retry</string>
    <string name="rp_ok">Okay</string>
    <string name="rp_bank_account_progress_header">Verifying your bank account details…</string>
    <string name="rp_bank_account_fail_header">Bank account details verification failed</string>
    <string name="rp_bank_account_progress_message">Verifying your bank account…</string>
    <string name="rp_bank_account_success_message">Your future settlements will be deposited in this account.\n\nAccount Number: <b>%1$s</b>\nIFSC Code: <b>%2$s</b></string>
    <string name="rp_bank_details">Bank details</string>
    <string name="rp_name">Name</string>
    <string name="rp_branch">Branch</string>
    <string name="rp_login_input_mobile">Enter mobile number</string>
    <string name="rp_login_enter_6_digit">Enter 6 digit OTP</string>
    <string name="rp_login">Login</string>
    <string name="rp_error_mobile_number">Invalid mobile number</string>
    <string name="rp_error_otp">Invalid OTP</string>
    <string name="rp_verify_otp">Verify OTP</string>
    <string name="rp_get_otp">Get OTP</string>
    <string name="rp_verify_user">Verify user</string>
    <string name="rp_did_not_get_otp">Did not received OTP?</string>
    <string name="rp_resend_otp_after">Resend OTP in</string>
    <string name="rp_get_otp_code">Get OTP</string>
    <string name="rp_request_otp_fail">OTP request failed</string>
    <string name="rp_active">Active</string>
    <string name="rp_pending">Pending</string>
    <string name="rp_create_new_payment">Create new mandate</string>
    <string name="rp_illustration_description_onboarding">Create your 1st eNACH / UPI Autopay / ECS mandate by clicking this button</string>
    <string name="rp_total_amount">Total amount</string>
    <string name="rp_collection_start_date">Collection start date</string>
    <string name="rp_customer_name">Customer name</string>
    <string name="rp_daily">Daily</string>
    <string name="rp_yearly">Yearly</string>
    <string name="rp_weekly">Weekly</string>
    <string name="rp_monthly">Monthly</string>
    <string name="rp_one_time_payment">One time payment</string>
    <string name="rp_per_daily">%s / per day</string>
    <string name="rp_per_yearly">%s / per year</string>
    <string name="rp_per_weekly">%s / per week</string>
    <string name="rp_per_monthly">%s / per month</string>
    <string name="rp_per_one_time_payment">%s / per one time payment</string>
    <string name="rp_call_us">Call us</string>
    <string name="rp_order_note">Bill Details (item name, bill no. etc…)</string>
    <string name="rp_generate_payment_link">Generate payment link</string>
    <string name="rp_installment_frequency">Installment frequency</string>
    <string name="rp_no_of_installments">Number of installments</string>
    <string name="rp_x_no_of_installments">%s installments</string>
    <string name="rp_error_notes">Please enter bill details</string>
    <string name="rp_error_amount">Please enter a valid amount</string>
    <string name="rp_share_on_whatsapp">Share on Whatsapp</string>
    <string name="rp_no_apps_found_to_handle_this_action">App not found to handle this action</string>
    <string name="rp_no_apps_found_to_handle_sms">Sms App not found on your phone, please copy the link &amp; share with the customer</string>
    <string name="rp_no_apps_found_to_handle_data">Whatsapp not found on your phone, please copy the link &amp; share with the customer</string>
    <string name="rp_mandate_details">Mandate details</string>
    <string name="rp_select_installment_frequency">Select installment frequency</string>
    <string name="rp_select_installments">Select number of installments</string>
    <string name="rp_link_generation_in_progress_header">Generating link…</string>
    <string name="rp_link_generation_in_progress_message">Link generation is in progress, Please wait till its complete</string>
    <string name="rp_link_generation_failed">Link generation failed</string>
    <string name="rp_invalid_contact">Invalid contact, Please selection valid contact</string>
    <string name="rp_contact_permission_denied">Contact permission denied, Please enable contact permission</string>
    <string name="rp_contact_permission_permanently_denied">Contact permission permanently denied, Please go to setting and enable it</string>
    <string name="rp_remove">Remove</string>
    <string name="rp_error_select_installment_frequency">Please select installment frequency</string>
    <string name="rp_error_enter_amount">Please enter amount</string>
    <string name="rp_days">Days</string>
    <string name="rp_weeks">Weeks</string>
    <string name="rp_months">Months</string>
    <string name="rp_years">Years</string>
    <string name="rp_single_payments">Once</string>
    <string name="rp_share_payment_link">Share payment link</string>
    <string name="rp_otp_time_left">00:%s</string>
    <string name="rp_token_verification_failed">User verification failed</string>
    <string name="rp_otp_verification_failed">OTP verification failed</string>
    <string name="rp_request_otp_in_progress">Requesting OTP…</string>
    <string name="rp_request_otp_in_progress_detail">Requesting OTP, Please wait…</string>
    <string name="rp_otp_verification_in_progress">Verifying OTP…</string>
    <string name="rp_token_verification_in_progress">Verifying user…</string>
    <string name="rp_token_verification_in_progress_detail">Verifying user, Please wait…</string>
    <string name="rp_otp_verification_in_progress_detail">Verifying OTP, Please wait…</string>
    <string name="rp_payment_link_share_message_one_time">Dear customer, MERCHANT_NAME has requested\nTOTAL_AMOUNT\nDue date:START_DATE\nClick on this link to view details:\nLINK.</string>
    <string name="rp_payment_link_share_message">Dear customer, MERCHANT_NAME has requested\nTOTAL_AMOUNT\n\nNO_OF_INSTALLMENT x INSTALLMENT_AMOUNT in INSTALLMENT_FREQUENCY installments\nStarting from: START_DATE\nClick on this link to view details:\nLINK</string>
    <string name="rp_otp_send_on">OTP sent on %s</string>
    <string name="rp_failed">Failed</string>
    <string name="rp_ask_customer_to_accept">Ask customer to accept</string>
    <string name="rp_india_flag">🇮🇳</string>
    <string name="rp_total_installments">Total installments</string>
    <string name="rp_amount_per_installments">Amount per installments</string>
    <string name="rp_allow_contact_permission">Allow contact permission</string>
    <string name="rp_why_we_need_contact_permission">We need to access your contacts for creating mandate</string>
    <string name="rp_allow">Allow</string>
    <string name="rp_payment_mode">Payment mode</string>
    <string name="rp_customer_upi_id_hint">Customer UPI ID</string>
    <string name="rp_other_details">Other details</string>
    <string name="rp_step_1_create_new_mandate">Step 1: Create new mandate</string>
    <string name="rp_error_upi_id_unsupported">(IDs with %s are not supported)</string>
    <string name="rp_request_sent_title_with_customer">Request sent to %s</string>
    <string name="rp_request_sent_subtitle_with_customer">Ask %s to Accept on their %s App</string>
    <string name="rp_upi_app">UPI</string>
    <string name="rp_phone_pe">PhonePe</string>
    <string name="rp_paytm">Paytm</string>
    <string name="rp_google_pay">Google Pay</string>
    <string name="rp_cred">Cred</string>
    <string name="rp_bhim">BHIM</string>
    <string name="rp_amazon_pay">Amazon Pay</string>
    <string name="rp_mobi_kwik">Mobikwik</string>
    <string name="rp_whats_app">Whatsapp</string>
    <string name="rp_hdfc">HDFC Bank</string>
    <string name="rp_icici">ICICI Bank</string>
    <string name="rp_axis">Axis Bank</string>
    <string name="rp_yes_bank">Yes Bank</string>
    <string name="rp_sbi">SBI Bank</string>
    <string name="rp_kotak">Kotak Bank</string>
    <string name="rp_indusland">IndusInd Bank</string>
    <string name="rp_idfc">IDFC Bank</string>
    <string name="rp_hsbc">HSBC Bank</string>
    <string name="rp_federal">Federal Bank</string>
    <string name="rp_bob">Bank of Baroda Bank</string>
    <string name="rp_union">Union Bank</string>
    <string name="rp_canara">Canara Bank</string>
    <string name="rp_dena">Dena bank</string>
    <string name="rp_bank_of_india">Bank of India</string>
    <string name="rp_upi_autopay_request_sent_to">UPI Autopay request sent to</string>
    <string name="rp_resend_request">Resend Request</string>
    <string name="rp_resend_request_send">Resend request sent</string>
    <string name="rp_date_change_header">Installment 1 delayed</string>
    <string name="rp_date_change_detail">Your mandate is taking unusually long to get registered. This may be due to a delay in processing from your bank and can take 2–3 more days. Your first installment will be collected as soon as the mandate is registered</string>
    <string name="rp_change_date_header">1st installment collection may be delayed</string>
    <string name="rp_change_date_detail">Your 1st installment date is less than 3 days away. E-NACH mandates can take up to 3 days to register and for first installment to deduct. </string>
    <string name="rp_delete_mandate_title">Delete this mandate?</string>
    <string name="rp_delete">Delete</string>
    <string name="rp_cancel">Cancel</string>
    <string name="rp_service_charge">Charges for you</string>
    <string name="rp_service_charge_subtitle">We plan to charge %s%% per successful payment collected in future but currently the app is FREE.</string>
    <string name="rp_service_charge_detail_percentage">Service charges: %s%% %s%%</string>
    <string name="rp_free">Free</string>
    <string name="rp_customers_bank_charges">Customer’s bank charges</string>
    <string name="rp_customer_bank_charge_subtitle">These charges are charged by customer’s bank, not by %1$s</string>
    <string name="rp_next">Next</string>
    <string name="rp_help">Help</string>
    <string name="rp_submit">Submit</string>
    <string name="rp_use_addhar_card">Use Aadhaar card</string>
    <string name="rp_verify_adhaar_with_otp">Verify Aadhaar with OTP</string>
    <string name="rp_upload_photo_of_your_aadhaar_card">Upload photo of your Aadhaar card</string>
    <string name="rp_upi_vs_nach_subtitle">UPI autopay mandate can be accepted using any UPI app like Gpay, PhonePe, Paytm etc. eNACH can be accepted using your Debit Card or Netbanking</string>
    <string name="rp_upi_vs_nach_title">Difference between UPI Autopay and eNACH</string>
    <string name="rp_call">Call</string>
    <string name="rp_refresh">Refresh</string>
    <string name="rp_enter_penalty_amount">Enter penalty amount</string>
    <string name="rp_penalty_amount">Penalty Amount</string>
    <string name="rp_rocketpay_charges">%1$s Charges</string>
    <string name="rp_you_will_get">You will get</string>
    <string name="rp_penalty_will_be_attempted_tomorrow">Penalty will be attempted tomorrow and amount will be settled to you after deducting Rocketpay charges</string>
</resources>