<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <import type="android.text.TextUtils"/>
        <import type="android.view.View"/>
        <variable
            name="vm"
            type="com.rocketpay.mandate.feature.installment.presentation.ui.penalty.viewmodel.EnterPenaltyAmountUM" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/rp_size_16">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/rp_enter_penalty_amount"
            android:textAppearance="@style/rp_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/rp_penalty_will_be_attempted_tomorrow"
            android:textAppearance="@style/rp_body_small"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lyt_otp"
            style="@style/RpMyTextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintEnabled="false"
            app:errorText="@{vm.penaltyAmountError}"
            app:errorIconDrawable="@null"
            app:errorEnabled="@{!TextUtils.isEmpty(vm.penaltyAmountError)}"
            android:layout_marginTop="@dimen/rp_size_24"
            app:layout_constraintTop_toBottomOf="@+id/tv_subtitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/tv_rocketpay_charges_label">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_otp"
                style="@style/RpMyCompactEditText"
                android:layout_width="match_parent"
                android:inputType="number"
                android:maxLength="6"
                android:hint="@string/rp_penalty_amount"
                android:textColorHint="@color/rp_grey_4"
                android:onTextChanged="@{(text,a,b,c) -> vm.updatePenaltyAmount(text)}"
                app:textWithCursor="@{vm.penaltyAmount}" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_rocketpay_charges_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="@dimen/rp_size_12"
            android:layout_marginEnd="@dimen/rp_size_16"
            android:layout_weight="1"
            android:text="@{vm.penaltyChargedByRocketPayLabel}"
            tools:text="@string/rp_rocketpay_charges"
            android:textAppearance="@style/rp_body_small"
            app:layout_constraintEnd_toStartOf="@+id/tv_rocketpay_charges"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lyt_otp" />

        <TextView
            android:id="@+id/tv_rocketpay_charges"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:layout_weight="1"
            tools:text="@string/rp_rocketpay_charges"
            android:text="@{vm.penaltyChargedByRocketPay}"
            android:textAppearance="@style/rp_body_small"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_rocketpay_charges_label"
            app:layout_constraintBottom_toBottomOf="@+id/tv_rocketpay_charges_label"/>

        <TextView
            android:id="@+id/tv_merchant_charges_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="@dimen/rp_size_6"
            android:layout_marginEnd="@dimen/rp_size_16"
            android:layout_weight="1"
            android:text="@string/rp_you_will_get"
            android:textAppearance="@style/rp_body_small"
            app:layout_constraintEnd_toStartOf="@+id/tv_merchant_charges"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_rocketpay_charges_label" />

        <TextView
            android:id="@+id/tv_merchant_charges"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:layout_weight="1"
            tools:text="@string/rp_rocketpay_charges"
            android:text="@{vm.penaltyChargedByMerchant}"
            android:textAppearance="@style/rp_body_small"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_merchant_charges_label"
            app:layout_constraintBottom_toBottomOf="@+id/tv_merchant_charges_label"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_save"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/rp_size_36"
            android:includeFontPadding="false"
            android:insetTop="@dimen/rp_size_0"
            android:insetBottom="@dimen/rp_size_0"
            android:minHeight="@dimen/rp_size_52"
            android:enabled="@{vm.isEnabled()}"
            android:onClick="@{() -> vm.onSubmitClick()}"
            android:text="@string/rp_submit"
            android:textAppearance="@style/rp_cta_regular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_merchant_charges_label" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
